<resources>
    <string name="app_name" translatable="false">Wolpepper</string>
    <string name="app_display_name" translatable="false">Wol:Pepper</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_orientation_only_portrait">Only Portrait</string>
    <string name="color_select">Select a Color</string>
    <string name="about_activity_title">About</string>
    <string name="title_activity_main_wallpapers">MainWallpapersActivity</string>
    <string name="title_upgrade_app_activity">Upgrade App</string>
    <string name="app_keys" translatable="false">keys</string>
    <string name="app_id_key" translatable="false">AppId</string>
    <string name="app_secret" translatable="false">AppSecret</string>
    <string name="napi_auth_key" translatable="false">NapiAuthKey</string>
    <string name="connection_error">Connection Error!</string>
    <string name="connection_error_description">Unable to connect to server. Please check your network connection and Click to Try Again!</string>
    <string name="something_went_wrong_error">Oops!!!</string>
    <string name="something_went_wrong_description">Something went wrong. Please try again.</string>
    <string name="no_collection_desc">This user have no collections.</string>
    <string name="no_liked_images_desc">No photos have been liked.</string>
    <string name="no_photos_uploaded">No photos have been uploaded by this user.</string>
    <string name="collection_cant_download">Uh-oh!</string>
    <string name="collection_cant_download_desc">Download full collection is only available for curated collections</string>
    <string name="already_downloading_title">Hey There!!!</string>
    <string name="image_already_downloading_desc_1">Image of\u0020</string>
    <string name="image_already_downloading_desc_2">\u0020with ID:\u0020</string>
    <string name="image_already_downloading_desc_3">\u0020is already downloading.</string>
    <string name="image_already_exist_desc_1">Image of\u0020</string>
    <string name="image_already_exist_desc_2">\u0020with ID:\u0020</string>
    <string name="image_already_exist_desc_3">\u0020already exist on storage.</string>
    <string name="collection_already_downloading_desc_1">The\u0020</string>
    <string name="collection_already_downloading_desc_2">\u0020is already downloading.</string>
    <string name="collection_already_exist_desc_1">The\u0020</string>
    <string name="collection_already_exist_desc_2">\u0020already exists on your storage.</string>
    <string name="login_failed_title">Login failed!</string>
    <string name="login_failed_desc">Unable to login. Please check your connection and try again later.</string>
    <string name="download_start_title">Downloading…</string>
    <string name="set_wallpaper_desc">Image will be set as wallpaper when download is finished!</string>
    <string name="set_random_wallpaper_desc">A random image will be set as wallpaper when download is finished! You can keep browsing.</string>
    <string name="grey_scale_title">Grayscale</string>
    <string name="grey_scale_desc">Image will be downloaded in grayscale!</string>
    <string name="sign_in_to_like_title">Hey There!</string>
    <string name="sign_in_to_like_desc">Sign In to like an image</string>
    <string name="wolpepper_already_downloading">This Wol:Pepper is downloading.</string>
    <string name="share_image_already_downloading_desc">Current image is already downloading try sharing after download finishes.</string>
    <string name="set_as_intent_already_downloading_desc">A wallpaper operation is being carried out. Please wait till it finishes.</string>
    <string name="share_image_alert_desc">Share menu will appear as soon as the image is downloaded successfully. "Even if you leave the app".</string>
    <string name="set_as_intent_alert_desc">\"Set As\" menu will appear as soon as the image is downloaded successfully. "Even if you leave the app".</string>
    <string name="folder_create_error">Unable to create folder "Wol:Peppers". Try Again.</string>
    <string name="solid_color_save_title">Awesome!</string>
    <string name="solid_color_save_desc">This wallpaper has been saved</string>
    <string name="solid_color_set_desc">This wallpaper has been set</string>
    <string name="preview_quality_error_title">Hey There!</string>
    <string name="preview_quality_error_desc">Minimum 5% quality allowed!</string>
    <string name="share_image_title">Share Wol:Pepper with :</string>
    <string name="share_image_subject">Wolpepper</string>
    <string name="share_image_text">Image By :\u0020</string>
    <string name="shared_via_wolpepper">Shared via Wolpepper!</string>
    <string name="user_base_preference_key" translatable="false">user_prefs</string>
    <string name="access_token" translatable="false">token</string>
    <string name="is_user_logged_in" translatable="false">is_user_logged_in</string>
    <string name="user_json" translatable="false">user_json</string>
    <string name="muzei_active_list_base_prefs_key" translatable="false">muzei_active_list_pref</string>
    <string name="muzei_image_id_base_prefs_key" translatable="false">muzei_image_id_pref</string>
    <string name="muzei_image_author_base_prefs_key" translatable="false">muzei_author_name_pref</string>
    <string name="muzei_image_date_base_pref_key" translatable="false">muzei_date_pref</string>
    <string name="muzei_image_download_links" translatable="false">muzei_download_link_pref</string>
    <string name="maximum_allowed_image_per_list" translatable="false">20</string>
    <string name="maximum_allowed_lists" translatable="false">2</string>
    <string name="muzei_active_list_key" translatable="false">muzei_active_list</string>
    <string name="muzei_refresh_interval_pref_base_key" translatable="false">refresh_interval_base_key</string>
    <string name="muzei_refresh_interval_pref_key" translatable="false">refresh_interval_key</string>
    <string name="muzei_create_list_title">Muzei List</string>
    <string name="muzei_create_first_list_desc">Name your very first Muzei active wallpaper list.</string>
    <string name="muzei_select_as_source_note">Note : Tap here to open Muzei and Select Wolpepper as source or to get it from PlayStore. </string>
    <string name="muzei_create_list_desc">Name the list!</string>
    <string name="list_name_hint">List Name</string>
    <string name="list_created_toast_text">\u0020List created.</string>
    <string name="muzei_name_already_exist_title">List name exist</string>
    <string name="muzei_name_already_exist_desc">The list with given name already exist try another name.</string>
    <string name="muzei_image_added_to_active_list">Image added to active Muzei list</string>
    <string name="muzei_image_removed_from_list">Image removed from active Muzei list</string>
    <string name="muzei_image_added_to_selected_list">Image added to selected Muzei list</string>
    <string name="muzei_image_removed_from_selected_list">Image removed from selected Muzei list</string>
    <string name="maximum_image_in_list_reached_title">Oops!</string>
    <string name="maximum_image_in_list_reached_desc">Maximum images allowed in a list reached (20). Consider buying in-App extension to get Unlimited images in a list.</string>
    <string name="maximum_list_reached_desc">Maximum list allowed reached (2). Consider buying in-App extension to get Unlimited List count.</string>
    <string name="muzei_image_already_exist_in_list_desc">This image already exist in list.</string>
    <string name="muzei_select_list_to_add_wallpaper_to">Select List</string>
    <string name="muzei_this_list_will_used_now_title">Activated</string>
    <string name="muzei_this_list_will_used_now">Selected list will be used from next refresh.</string>
    <string name="muzei_are_you_sure_to_delete_list">Are you sure, delete the selected list?</string>
    <string name="muzei_swipe_to_delete_notification">Swipe to delete an image from this list.</string>
    <string name="image_deleted_from_list">Image deleted from this list.</string>
    <string name="muzei_list_deleted">\u0020list deleted!</string>
    <string name="cancel_button">Cancel</string>
    <string name="create_new_list">Create new</string>
    <string name="unknown_value" translatable="false">Unknown</string>
    <string name="view_on_unsplash">View on Unsplash.com</string>
    <string name="preview_quality_note">Use the seekbar to set the preview quality.\nNote: 1. Preview updates when you release seekbar. \n2. The higher the quality the slower your images will load in app. So try to keep a good balance between them based on your connectivity.</string>
    <string name="quality_percent_display">Quality :\u0020</string>
    <string name="muzei_description">Awesome Wol:Peppers</string>
    <string name="title_activity_settings">Settings</string>
    <string name="refresh_interval_hint">Set Refresh Interval (Default: 3hrs)</string>
    <string name="restart_app_to_see_effects">Restart app to apply settings completely.</string>
    <string name="exit_without_saving">Discard Changes and leave?</string>
    <string name="discard_changes">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="always_ask_image_type">Always ask</string>
    <string name="raw_image_type">Raw</string>
    <string name="jpeg_image_type">Jpeg</string>
    <string name="current_default_string">Current : %1$s</string>
    <string name="choose_default_image_format_dialog_title">Select format</string>
    <string name="quick_set_wallpaper_nav_drawer_title">Quick Set Wallpaper</string>
    <string name="storage_setting_nav_drawer_title">Storage Settings</string>
    <string name="current_using_default_storage">Currently using default storage location</string>
    <string name="current_using_custom_storage">Currently using custom storage location</string>
    <string name="is_true">true</string>
    <string name="is_false">false</string>
    <string name="preview_quality_base_pref_key" translatable="false">preview_quality_base_pref_key</string>
    <string name="preview_quality_percent_pref_key" translatable="false">preview_quality_percent</string>
    <string name="default_image_format_base_pref_key" translatable="false">default_image_base_pref_key</string>
    <string name="default_image_format_pref_key" translatable="false">default_image_pref_key</string>
    <string name="quick_set_wallpaper_base_pref" translatable="false">quick_set_wallpaper_base_pref</string>
    <string name="quick_set_wallpaper_pref" translatable="false">quick_set_wallpaper_pref</string>
    <string name="storage_preference_base_key">storage_preference_base_key</string>
    <string name="storage_type_pref_key" translatable="false">storage_type_pref_key</string>
    <string name="storage_custom_location_path_key" translatable="false">storage_custom_location_key</string>
    <string name="storage_custom_location_uri_key" translatable="false">storage_custom_location_uri_key</string>
    <string name="admob_app_id" translatable="false"></string>
    <string name="share_wolpepper">Share Wol:Pepper</string>
    <string name="share_text">Share Wol:Pepper with all the amazing humans you know</string>
    <string name="join_eclectik_community">Telegram Group</string>
    <string name="googletext">Join our Google+ Community for latest update news and also help us build better apps.</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="communitytext">We love to hear from our users, send us whatever thoughts or suggestions you have about the app.</string>
    <string name="other_apps">Other Apps</string>
    <string name="checkout_other_apps_developed_by_us">Checkout other apps developed by us</string>
</resources>