<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical"
        tools:context="com.eclectik.wolpepper.activities.settingsActivities.SettingsActivity">

        <LinearLayout
            android:id="@+id/muzei_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:fontFamily="@font/spacemono_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Muzei Settings"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Configure the way wallpapers are used in Muzei"
                    android:textColor="@color/subTextColor"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/preview_quality_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="visible"
            android:onClick="openPreviewSettings"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/spacemono_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Preview Quality"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Configure the quality of preview images shown in app"
                android:textColor="@color/subTextColor"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="visible"
            android:onClick="showDefaultImageFormatDialog"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/spacemono_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Download Image Format"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose the default format of image to download"
                android:textColor="@color/subTextColor"
                android:textSize="12sp" />

            <TextView
                android:fontFamily="@font/spacemono_bold"
                android:id="@+id/current_format_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Current :"
                android:textColor="@color/subTextColor"
                android:textStyle="bold"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/share_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/spacemono_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_wolpepper"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/share_text"
                android:textColor="@color/subTextColor"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/spacemono_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send_feedback"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/communitytext"
                android:textColor="@color/subTextColor"
                android:textSize="12sp" />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/community"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/spacemono_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/join_eclectik_community"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/googletext"
                android:textColor="@color/subTextColor"
                android:textSize="12sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/other_apps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/spacemono_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other_apps"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkout_other_apps_developed_by_us"
                android:textColor="@color/subTextColor"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>